cache is commented with JavaDoc and refactored a bit, the unit tests for Cache implementation was enhanced to test reading AND writing